Bug 959414 - [B2G][Contacts] Cancelling out of editing or Updating a contact after importing displays broken UI

--- a/apps/communications/contacts/style/fb_extensions.css
+++ b/apps/communications/contacts/style/fb_extensions.css
@@ -16,8 +16,8 @@
   -moz-transform: translateY(-100%);
 }
 
-#fb-extensions.closing {
-  -moz-transform: translateY(0);
+#fb-extensions.hidden {
+  visibility: hidden;
 }
 
 .facebook.removed dl,
